Mon Dec  7 23:45:20 2015  Koichi Sasada  <ko1@atdot.net>

	* string.c: introduce String#+@ and String#-@ to control
	  String mutability.
	  [Feature #11782]

Mon Dec  7 23:39:49 2015  Ben Miller  <bjmllr@gmail.com>

	* parse.y: add heredoc <<~ syntax.  [Feature #9098]

Mon Dec  7 23:06:16 2015  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* prelude.rb (IO#read_nonblock): [DOC] add missing options to
	  call-seq.  [ruby-core:71627] [Bug #11730]

Mon Dec  7 15:50:50 2015  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* .gitignore: added cygruby*.def for Cygwin

Sun Dec  6 19:52:31 2015  Eric Wong  <e@80x24.org>

	* include/ruby/intern.h (rb_autoload): deprecate
	* internal.h (rb_autoload_str): declare
	* load.c (rb_mod_autoload): use rb_autoload_str
	* variable.c (rb_autoload): become compatibility wrapper
	  (rb_autoload_str): hoisted out from old rb_autoload
	  [ruby-core:71369] [Feature #11664]

Sun Dec  6 19:02:55 2015  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* configure.in: add missing x.

Sun Dec  6 18:25:22 2015  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/webrick/test_cgi.rb (TestWEBrickCGI#test_cgi): gave up the test
	  of binary path info test on Windows because the test had passed
	  occasionally as the comment said.

Sun Dec  6 15:25:06 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/io/console/console.c (console_getpass): add IO#getpass
	  method.

Sun Dec  6 08:39:05 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* ext/json/json.gemspec: bump version to json 1.8.3. CRuby already contained
	  upstream changes.

	  https://github.com/ruby/ruby/commit/4d059bf9f5f10f3d3088de49fc87e5555db7770d
	  https://github.com/flori/json/commit/d4c99de78905d96c3f301f48b2c789943bb3f098

	* ext/json/lib/json/version.rb: ditto.

Sat Dec  5 17:48:25 2015  Lars Kanis  <lars@greiz-reinsdorf.de>

	* tool/fake.rb: Fix cross build when srcdir is an absolute path.

	* Makefile.in: PREP dependency is needed when cross build too, not